<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:contentInsetStartWithNavigation="0dp" />

    <TextView
        android:id="@+id/my_textview"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="106dp"
        android:layout_marginStart="50dp"
        android:text="@string/login"
        android:textSize="60sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_ou_username"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="115dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/click_me" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

</LinearLayout>